# zta_thesis_project

./: .dockerignore  .env.example  .gitignore  0-application.yaml  CITATION.cff  Dockerfile  LICENSE  README-gitflow.md  README.md  Taskfile.gitflow.yaml  Taskfile.gitflow.yml  Taskfile.helm.yml  Taskfile.yaml  Taskfile.yml  devbox.json  install.sh  mkdocs.yaml  pyproject.toml  requirements.txt  token.txt  versions.json
.github/workflows/: docker_publish.yml
2.1.0/: 404.html  index.html  sitemap.xml
2.1.0/0-quickstart/0-prerequisites/: index.html
2.1.0/0-quickstart/1-getting-started/: index.html
2.1.0/1-architecture/0-overview/: index.html
2.1.0/2-project/0-topic1/: index.html
2.1.0/2-project/1-topic2/: index.html
2.1.0/2-project/2-topic3/: index.html
2.1.0/3-troubleshooting/0-overview/: index.html
2.1.0/3-troubleshooting/1-problem1/: index.html
2.1.0/3-troubleshooting/2-problem2/: index.html
2.1.0/4-about/0-about/: index.html
2.1.0/disclaimer/: index.html
2.1.0/search/: search_index.json
2.1.1/: 404.html  index.html  sitemap.xml
2.1.1/0-quickstart/0-prerequisites/: index.html
2.1.1/0-quickstart/1-getting-started/: index.html
2.1.1/1-architecture/0-overview/: index.html
2.1.1/2-project/0-topic1/: index.html
2.1.1/2-project/1-topic2/: index.html
2.1.1/2-project/2-topic3/: index.html
2.1.1/disclaimer/: index.html
3.0.0/: 404.html  index.html  sitemap.xml
3.0.0/disclaimer/: index.html
3.0.0/search/: search_index.json
compose/: docker-compose.yml
docker/: Dockerfile  README.md  entrypoint.sh
docs/: disclaimer.md  index.md
docs/0-quickstart/: 0-prerequisites.md  1-getting-started.md
docs/1-architecture/: 0-overview.md
docs/2-project/: 0-topic1.md  1-topic2.md  2-topic3.md
docs/3-troubleshooting/: 0-overview.md  1-problem1.md  2-problem2.md
docs/4-about/: 0-about.md
final/: app.py
fluent-bit/: fluent-bit.conf
grafana/dashboards/: sample-dashboard.json
k8s/: README.md
k8s/charts/: .gitignore
k8s/dev/: README.md  Tiltfile  values-local.yaml
k8s/scripts/: deploy-observability.sh  helm-wrapper.sh  k3s-init.sh
latest/: 404.html  index.html
latest/disclaimer/: index.html
loki/: loki-config.yaml
nginx/: nginx.conf
otel/: otel-collector-config.yaml
prometheus/: prometheus.yaml
src/: app.py
tempo/: tempo.yaml
(+63 files in other folders)
