[project]
name = "final"
version = "0.1.0"
description = ""
authors = [
    {name = "tsn@home.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask (>=3.1.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

package-mode = false

[tool.poetry.group.dev.dependencies]
