[project]
name = "src"
version = "0.1.0"
description = ""
authors = [
    {name = "tsn@home.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask (>=3.1.1,<4.0.0)",
    "opentelemetry-api (>=1.35.0,<2.0.0)",
    "opentelemetry-sdk (>=1.35.0,<2.0.0)",
    "opentelemetry-exporter-otlp-proto-http (>=1.35.0,<2.0.0)",
    "opentelemetry-instrumentation (>=0.56b0,<0.57)",
    "opentelemetry-instrumentation-flask (>=0.56b0,<0.57)",
    "opentelemetry-instrumentation-logging (>=0.56b0,<0.57)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

package-mode = false

[tool.poetry.group.dev.dependencies]
