[project]
name = "src"
version = "0.1.0"
description = ""
authors = [
    {name = "tsn@home.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask (>=3.1.1,<4.0.0)",
    "opentelemetry-api (>=1.35.0,<2.0.0)",
    "opentelemetry-sdk (>=1.35.0,<2.0.0)",
    "opentelemetry-exporter-otlp-proto-http (>=1.35.0,<2.0.0)",
    "opentelemetry-instrumentation (>=0.56b0,<0.57)",
    "opentelemetry-instrumentation-flask (>=0.56b0,<0.57)",
    "opentelemetry-instrumentation-logging (>=0.56b0,<0.57)",
    "requests (>=2.32.4,<3.0.0)",
    "rich (>=14.0.0,<15.0.0)",
    "mkdocs (>=1.6.1,<2.0.0)",
    "mkdocs-material (>=9.6.15,<10.0.0)",
    "mkdocstrings[python] (>=0.29.1,<0.30.0)",
    "pymdown-extensions (>=10.16,<11.0)",
    "mkdocs-mermaid2-plugin (>=1.2.1,<2.0.0)",
    "mike (>=2.1.3,<3.0.0)",
    "mkdocs-minify-plugin (>=0.8.0,<0.9.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

package-mode = false

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
pytest = "^8.4.1"